# NiccoBot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  database.sqlite-shm  database.sqlite-wal
.github/workflows/: docker-publish.yaml  docker-publish.yml
helm/niccobot-chart/: .helmignore  Chart.yaml  values.yaml
helm/niccobot-chart/templates/: _helpers.tpl  deployment.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  service.yaml
migrations/: 20240410132000_create_tables.sql
niccobot/: Cargo.toml
niccobot/src/: main.rs
niccobot_core/: Cargo.toml
niccobot_core/src/: client.rs  intents.rs  lib.rs
niccobot_core/src/commands/: accounts.rs  age.rs  join.rs  mod.rs  play.rs  smurfs.rs
niccobot_core/src/commands/models/: music.rs
niccobot_core/src/db/: db.rs
niccobot_core/src/models/: http.rs
niccobot_util/: Cargo.toml
niccobot_util/src/crypto/: decryption.rs  encryption.rs  hash.rs  mod.rs  salt.rs
scripts/: build_image.sh  create_regcred_secret.sh
