[workspace]

members = [ "niccobot",
    "niccobot_core",
    "niccobot_util",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = { version = "1.0.111", features = [] }
serenity = { version = "0.12.0", features = ["cache", "framework", "standard_framework", "voice", "default"] }
dotenv = "0.15"
poise = "0.6.1"
derive_builder = "0.13.0"
songbird = { version = "0.4.0"}
reqwest = { version = "0.11.23", features = [] }
