[package]
name = "niccobot_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
serde_json = {workspace = true}
serenity = {workspace = true}
dotenv = {workspace = true}
poise = {workspace = true}
derive_builder = {workspace = true}
reqwest = { version = "0.11.23", features = [] }
thiserror = "1.0.56"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
anyhow = "1.0.82"
base64 = "0.21.7"
argon2 = {workspace = true}
niccobot_util = { path = "../niccobot_util"}