[package]
name = "niccobot_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
serde_json = {workspace = true}
serenity = {workspace = true}
dotenv = {workspace = true}
poise = {workspace = true}
derive_builder = {workspace = true}
reqwest = {workspace = true }